# ultralytics_cones

./: README.md  package.xml  requirements.txt  setup.cfg  setup.py
launch/: demo.py  demo_resize.py
test/: test_image_node.py
ultralytics_cones/: image_node.py
