[metadata]
name = ultralytics_cones
version = 0.1.0
description = A ROS package for processing sensor images using Ultralytics.
author = Your Name
author_email = your.email@example.com
license = MIT
url = https://github.com/yourusername/ultralytics_cones
python_requires = >=3.6

[options]
packages = find:
install_requires =
    rclpy
    sensor_msgs
    opencv-python

[options.packages.find]
where = ultralytics_cones

[options.entry_points]
console_scripts =
    image_node = ultralytics_cones.image_node:main